cambiando nombres de imagenes

--- a/template_boda/index.html
+++ b/template_boda/index.html
@@ -1075,7 +1075,7 @@
                             <div class="team-item">
                                 <div class="team-img">
                                     <div class="team-img-main">
-                                        <img src="img/Groomsmen-1.png" class="img-fluid w-100" alt="">
+                                        <img src="img/Groomsmen_1.png" class="img-fluid w-100" alt="">
                                     </div>
                                     <div class="team-img-bg position-absolute"
                                         style="bottom: -30px; left: -100px; transform: rotate(50deg); z-index: 1;">
@@ -1100,7 +1100,7 @@
                             <div class="team-item">
                                 <div class="team-img">
                                     <div class="team-img-main">
-                                        <img src="img/Groomsmen-2.png" class="img-fluid w-100" alt="">
+                                        <img src="img/Groomsmen_2.png" class="img-fluid w-100" alt="">
                                     </div>
                                     <div class="team-img-bg position-absolute"
                                         style="bottom: -30px; left: -100px; transform: rotate(50deg); z-index: 1;">
@@ -1125,7 +1125,7 @@
                             <div class="team-item">
                                 <div class="team-img">
                                     <div class="team-img-main">
-                                        <img src="img/Groomsmen-3.png" class="img-fluid w-100" alt="">
+                                        <img src="img/Groomsmen_3.png" class="img-fluid w-100" alt="">
                                     </div>
                                     <div class="team-img-bg position-absolute"
                                         style="bottom: -30px; left: -100px; transform: rotate(50deg); z-index: 1;">
@@ -1150,7 +1150,7 @@
                             <div class="team-item">
                                 <div class="team-img">
                                     <div class="team-img-main">
-                                        <img src="img/Groomsmen-4.png" class="img-fluid w-100" alt="">
+                                        <img src="img/Groomsmen_4.png" class="img-fluid w-100" alt="">
                                     </div>
                                     <div class="team-img-bg position-absolute"
                                         style="bottom: -30px; left: -100px; transform: rotate(50deg); z-index: 1;">
