--- a/template_boda/index.html
+++ b/template_boda/index.html
@@ -71,8 +71,7 @@
                         <div class="p-3 mx-auto animated zoomIn" style="max-width: 900px;">
                             <div class="d-inline-block border-end-0 border-start-0 border-secondary p-2 mb-4"
                                 style="border-style: double;">
-                                <h4 class="text-white text-uppercase fw-bold mb-0" style="letter-spacing: 3px;">La Boda
-                                    de</h4>
+                                <h4 class="text-white fw-bold mb-0" style="letter-spacing: 3px;">Nuestra Boda</h4>
                             </div>
                             <h1 class="display-1 text-capitalize text-white mb-3 wedding-names text-center">
                                 <span class="wedding-name">Maria Jose</span><br>
@@ -81,8 +80,8 @@
                             </h1>
                             <div class="d-inline-block border-end-0 border-start-0 border-secondary p-2 mb-5"
                                 style="border-style: double;">
-                                <h4 class="text-white text-uppercase fw-bold mb-0" style="letter-spacing: 3px;">Lunes 9
-                                    de Junio 2025</h4>
+                                <h4 class="text-white fw-bold mb-0" style="letter-spacing: 3px;">28
+                                    de Novimebre 2025</h4>
                             </div>
                             <div class="d-flex align-items-center justify-content-center">
                                 <a class="btn btn-primary btn-primary-outline-0 py-3 px-5"
@@ -109,7 +108,7 @@
         <div class="container position-relative py-5" style="padding-top: 5rem !important;">
             <div class="mx-auto text-center mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800;">
                 <h1 class="text-primary display-1">Eres importante para nosotros!</h1>
-                <h4 class="text-dark mb-0">Te invitamos este 9 de Junio del 2025 a la union de</h4>
+                <h4 class="text-dark mb-0">Te invitamos este 28 de Noviembre del 2025 a la union de</h4>
             </div>
             <div class="row">
                 <div class="col-lg-12">
@@ -167,10 +166,10 @@
                 <div class="col-xl-6">
                     <div class="wow fadeIn" data-wow-delay="0.3s">
                         <h1 class="display-5 mb-4">Con la bendicion de Nuestros Padres</h1>
-                        <p class="display-5 text-dark fs-2 mb-4">
+                        <p class="display-2 text-dark mb-4">
                             Padres de la Novia : Luis & Ricardo
                         </p>
-                        <p class="display-5 text-dark fs-2 mb-4">
+                        <p class="display-2 text-dark mb-4">
                             Padres de el Novio : Luz Maria & Estaban
                         </p>
                         <div class="tab-class bg-primary p-4">
@@ -240,7 +239,7 @@
                                 <h4 class="mb-2 text-dark mb-0">Reunion Previa</h4>
                             </div>
                             <p class="m-0 fs-5 text-dark">En la casa de la novia</p>
-                            <p class="m-0 fs-5 text-dark"><b>10/06/2025 4:00 pm</b></p>
+                            <p class="m-0 fs-5 text-dark"><b>28/11/2025 4:00 pm</b></p>
                         </div>
                     </div>
                 </div>
@@ -256,7 +255,7 @@
                                 <h4 class="text-dark mb-2 mb-0">Caminata a la Iglesia</h4>
                             </div>
                             <p class="m-0 fs-5 text-dark">Desde el parque</p>
-                            <p class="m-0 fs-5 text-dark"><b>10/06/2025 5:30 pm</b></p>
+                            <p class="m-0 fs-5 text-dark"><b>28/11/2025 5:30 pm</b></p>
                         </div>
                     </div>
                     <div class="col-md-6 border-top border-end border-secondary p-4">
@@ -1274,10 +1273,10 @@
                     <div class="wedding-date-content">
                         <div class="d-inline-block border-end-0 border-start-0 border-secondary p-2 mb-4 asistencia-titulo"
                             style="border-style: double;">
-                            <h4 class="text-dark text-uppercase mb-0 fw-bold" style="letter-spacing: 3px;">Confirma tu
+                            <h4 class="text-dark mb-0 fw-bold" style="letter-spacing: 3px;">Confirma tu
                                 Asistencia antes de:</h4>
                         </div>
-                        <h1 class="display-4">12 Diciembre del 2024</h1>
+                        <h1 class="display-4">28 de Noviembre del 2025</h1>
                         <div class="d-flex align-items-center justify-content-center mb-5 contador-fecha">
                             <div class="text-dark fs-2 me-4">
                                 <div id="days">00</div>
