Agregando los cambios finales que se mandaron

--- a/sitio_web_psicologa/index.html
+++ b/sitio_web_psicologa/index.html
@@ -64,8 +64,9 @@
           <li><a href="index.html#hero" class="active">Inicio</a></li>
           <li><a href="index.html#about">Sobre Mí</a></li>
           <li><a href="index.html#services">Servicios</a></li>
+          <li><a href="index.html#cursos">Cursos</a></li>
           <!--<li><a href="index.html#portfolio">Portfolio</a></li> -->
-          <li><a href="index.html#pricing">Planes de Precios</a></li>
+          <li><a href="index.html#pricing">Modalidades y honorarios</a></li>
           <li><a href="index.html#faq">Preguntas Frecuentes</a></li>
           <!--<li><a href="blog.html">Blog</a></li> -->
           <!--<li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -92,7 +93,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Reserva Una Cita</a>
+      <a class="btn-getstarted" href="index.html#contact">Reserva Una Cita</a>
 
     </div>
   </header>
@@ -456,7 +457,7 @@
             <img src="assets/img/sesion_en_linea.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>Beneficios de Terapia en Linea</h3>
+            <h3>Beneficios de la Terapia en Línea</h3>
             <p>La terapia en línea te permite cuidar de tu bienestar emocional sin importar dónde estés.
               Disfruta de la flexibilidad y accesibilidad que esta modalidad ofrece,
               facilitando el acceso a una experiencia terapéutica cómoda y eficaz.
@@ -650,7 +651,6 @@
                   </button>
                 </h2><div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionLeft">
                   <div class="accordion-body">
-                    <strong>Fundamentos de la medición psicológica.</strong> Este curso te introducirá en los conceptos básicos de la psicometría:
                     <ul class="custom-list">
                       <li>Raven - Inteligencia.</li>
                       <li>Cuestionario de adaptabilidad social, MOSS.</li>
@@ -669,7 +669,6 @@
                   </button>
                 </h2>                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionLeft">
                   <div class="accordion-body">
-                    <strong>Especialización en evaluación de niños y adolescentes.</strong> Curso enfocado en técnicas específicas para población infantil:
                     <ul class="custom-list">
                       <li>Cuestionario de ansiedad de Beck</li>
                        <li>Terman - inteligencia.</li>
@@ -684,17 +683,17 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Ética en la Práctica Psicológica
+                    Curso de Psicometría Infantil
                   </button>
-                </h2>                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionLeft">
+                </h2><div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionLeft">
                   <div class="accordion-body">
-                    <strong>Principios éticos y deontológicos.</strong> Aspectos fundamentales de la ética profesional:
                     <ul class="custom-list">
-                      <li>Confidencialidad y secreto profesional</li>
-                      <li>Consentimiento informado</li>
-                      <li>Límites y boundaries profesionales</li>
-                      <li>Dilemas éticos en la práctica clínica</li>
-                      <li>Marco deontológico del psicólogo</li>
+                      <li>Raven escala coloreada - inteligencia</li>
+                      <li>Cuestionario de entrevista infantil, test de Roberto y rosita.</li>
+                      <li>Dibujo de Figura Humana Koppitz</li>
+                      <li>Test de apercepción infantil CAT-A</li>
+                      <li>Test Familia</li>
+                      <li>MMPI-Adolescentes</li>
                     </ul>
                   </div>
                 </div>
@@ -708,17 +707,15 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFour">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    Interpretación de Pruebas Proyectivas
+                    Curso de Psicometría de la Personalidad
                   </button>
-                </h2>                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionRight">
+                </h2><div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionRight">
                   <div class="accordion-body">
-                    <strong>Técnicas proyectivas en profundidad.</strong> Principales pruebas proyectivas y su interpretación:
                     <ul class="custom-list">
-                      <li>Test de Rorschach</li>
-                      <li>Test de Apercepción Temática (TAT)</li>
-                      <li>Figura Humana de Machover</li>
-                      <li>Pruebas gráficas (casa, árbol, persona)</li>
-                      <li>Casos clínicos supervisados</li>
+                      <li>MMPI-2</li>
+                      <li>16 FP</li>
+                      <li>Dibujo de figura humana</li>
+                      <li>Persona bajo la lluvia</li>
                     </ul>
                   </div>
                 </div>
@@ -726,35 +723,16 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFive">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                    Neuropsicología Clínica
+                   Curso Evaluación Psicológica Para La Orientación Vocacional
                   </button>
                 </h2>                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionRight">
                   <div class="accordion-body">
-                    <strong>Evaluación neuropsicológica integral.</strong> Especialización en funciones cognitivas:
                     <ul class="custom-list">
-                      <li>Baterías neuropsicológicas</li>
-                      <li>Evaluación de funciones ejecutivas</li>
-                      <li>Memoria y atención</li>
-                      <li>Daño cerebral y trastornos neurodegenerativos</li>
-                      <li>Interpretación de resultados</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingSix">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                    Redacción de Informes Psicológicos
-                  </button>
-                </h2>                <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionRight">
-                  <div class="accordion-body">
-                    <strong>Comunicación profesional efectiva.</strong> Habilidades para informes psicológicos:
-                    <ul class="custom-list">
-                      <li>Estructura del informe psicológico</li>
-                      <li>Lenguaje técnico apropiado</li>
-                      <li>Comunicación para diferentes audiencias</li>
-                      <li>Recomendaciones terapéuticas</li>
-                      <li>Aspectos legales del informe</li>
+                      <li>Entrevista y test de inteligencias múltiples.</li>
+                      <li>Terman merrill</li>
+                      <li>Inventario de orientación profesional universitaria.</li>
+                      <li>Test Kuder.</li>
+                      <li>Elaboración del informe.</li>
                     </ul>
                   </div>
                 </div>
@@ -784,86 +762,66 @@
 
           <div class="col-lg-4">
             <div class="pricing-item">
-              <h3>Consulta de Valoracion Gratuita</h3>
+              <h3>Enfoque Personalizado</h3>
               <div class="icon">
-                <i class="bi bi-box"></i>
+                <i class="bi-person-heart"></i>
               </div>
               <h4><sup>$</sup><span id="precio-valoracion" data-precio-usd="0"></span></h4> <!--PRECIO VALORACION-->
               <ul>
-                <p class="text-center">Una primera consulta sin costo donde podrás compartir tus necesidades y recibir
-                  una valoración inicial</p>
+                <p class="text-center">Cada proceso terapéutico es único, por eso adapto los honorarios a tus posibilidades, sin planes rígidos ni paquetes cerrados. La prioridad es ofrecer un acompañamiento justo y respetuoso.</p>
+               <!--
                 <li><i class="bi bi-check"></i> <span>Evaluación inicial y recomendaciones</span></li>
                 <li><i class="bi bi-check"></i> <span>Espacio para plantear tus objetivos y dudas</span></li>
                 <li><i class="bi bi-check"></i> <span>Definición del enfoque de trabajo</span></li>
+              -->
               </ul>
-              <div class="text-center"><a href="#contact" class="buy-btn">Contactanos</a></div>
+              <div class="text-center"><a href="#contact" class="buy-btn">Contactame</a></div>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-4">
             <div class="pricing-item">
-              <h3>Plan Flexible</h3>
+              <h3>Valoracion Inicial</h3>
               <div class="icon">
-                <i class="bi bi-rocket"></i>
+                <i class="bi-chat-dots"></i>
               </div>
 
               <h4><sup>$</sup><span id="precio-flexible" data-precio-usd="500"></span></h4> <!--PRECIO FLEXIBLE-->
               <ul>
-                <p class="text-center">Ideal para quienes buscan sesiones de terapia ocasionales o un acompañamiento
-                  adaptado a sus tiempos y necesidades.</p>
-                <li><i class="bi bi-check"></i> <span>4 sesiones mensuales de terapia</span></li>
-                <li><i class="bi bi-check"></i> <span>Flexibilidad en el horario de las sesiones</span></li>
-                <li><i class="bi bi-check"></i> <span>Acceso a materiales y recursos de apoyo entre sesiones</span></li>
-                <li><i class="bi bi-check"></i> <span>Apoyo en el desarrollo de habilidades específicas</span></li>
+                <p class="text-center"> La primera consulta es con costo general, es un espacio breve para conocernos, aclarar dudas y explorar juntos cómo puedo apoyarte en tu camino.</p>
               </ul>
-              <div class="text-center"><a href="#contact" class="buy-btn">Contactanos</a></div>
+              <div class="text-center"><a href="#contact" class="buy-btn">Contactame</a></div>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-4">
             <div class="pricing-item">
-              <h3>Plan de Bienestar Integral</h3>
+              <h3>Pago por Sesión</h3>
               <div class="icon">
-                <i class="bi bi-send"></i>
+                <i class="bi-clock-history"></i>
               </div>
               <h4><sup>$</sup><span id="precio-integral" data-precio-usd="1500"></span></h4> <!--PRECIO INTEGRAL-->
               <ul>
-                <p class="text-center">Un plan completo para quienes desean un seguimiento constante y un apoyo integral
-                  en su proceso de desarrollo personal.</p>
-                <li><i class="bi bi-check"></i> <span> 6 sesiones mensuales de terapia (una sesión semanal)</span></li>
-                <li><i class="bi bi-check"></i> <span>Acceso a sesiones de seguimiento adicionales según
-                    necesidad</span></li>
-                <li><i class="bi bi-check"></i> <span>Materiales personalizados de apoyo y seguimiento</span></li>
-                <li><i class="bi bi-check"></i> <span>Asesoramiento en estrategias para el bienestar emocional</span>
-                </li>
+                <p class="text-center"> Después de la valoración, el pago se realiza por sesión. La frecuencia y duración las definimos juntos, respetando tu ritmo y necesidades.</p>
               </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Contactanos</a></div>
+              <div class="text-center"><a href="#" class="buy-btn">Contactame</a></div>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
             <div class="col-lg-4">
               <div class="pricing-item">
-                <h3>Plan intensivo de Transformación Personal</h3>
+                <h3>Flexibilidad y Diálogo</h3>
                 <div class="icon">
-                  <i class="bi bi-send"></i>
+                  <i class="bi-chat-heart"></i>
                 </div>
                 <h4><sup>$</sup><span id="precio-transformacion" data-precio-usd="5000"></span></h4>
                 <!-- PRECIO TRANSFORMACION -->
                 <ul>
                   <li>
                     <p>
-                      Este plan está diseñado para quienes desean un enfoque intensivo y personalizado en su desarrollo
-                      personal y bienestar emocional. Incluye un acompañamiento continuo y herramientas avanzadas para
-                      potenciar tu crecimiento.
+                      Estoy abierta a conversar sobre costos y formas de pago para encontrar la opción que mejor se adapte a ti.
                     </p>
-                  </li>
-                  <li><i class="bi bi-check"></i> <span>8 sesiones mensuales (dos por semana)</span></li>
-                  <li><i class="bi bi-check"></i> <span>Soporte de emergencia a través de videollamada o chat para
-                      momentos de crisis</span></li>
-                  <li><i class="bi bi-check"></i> <span>Asesoría en planes de bienestar físico y emocional
-                      integrales</span></li>
-                  <li><i class="bi bi-check"></i> <span>Acceso exclusivo a talleres y grupos de apoyo en línea</span>
                   </li>
                 </ul>
                 <div class="text-center"><a href="#" class="buy-btn">Contáctanos</a></div>
