detalles en curso de capacitacion

--- a/sitio_web_psicologa/index.html
+++ b/sitio_web_psicologa/index.html
@@ -631,7 +631,7 @@
     <section id="cursos">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Cursos de capacitación en psicología</h2>
+        <h2 style="font-size: 17px !important;">Cursos de capacitación en psicología</h2>
         <p> En estos cursos ofrezco espacios de aprendizaje diseñados especialmente para estudiantes y profesionales de la psicología que desean fortalecer sus conocimientos y habilidades.
           Con un enfoque práctico y ético, los contenidos se centran en áreas clave como la psicometría y la evaluación psicológica, siempre desde una mirada cercana y reflexiva que busca aportar herramientas útiles para la práctica clínica y educativa.
           Mi objetivo es acompañarte en tu formación para que puedas crecer como profesional y ofrecer lo mejor a quienes atiendes.
@@ -808,7 +808,7 @@
             </div>
           </div><!-- End Pricing Item -->
 
-          <div class="d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+          <div class="d-flex justify-content-center align-items-center">
             <div class="col-lg-4">
               <div class="pricing-item">
                 <h3>Flexibilidad y Diálogo</h3>
