--- a/influncer_portafolio/index.html
+++ b/influncer_portafolio/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!--Plyr Video Player-->
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -122,7 +124,7 @@
     <!-- SECCIÓN ESTADÍSTICAS-->
     <section class="stats-section py-5">
         <div class="container text-center">
-            <h2 class="section-title mb-5">Mis Estadísticas</h2>
+            <h2 class="section-title mb-5">Mi numero de Seguidores Actuales</h2>
             <div class="row g-4 justify-content-center">
 
                 <!-- TIKTOK -->
@@ -132,7 +134,7 @@
                             <i class="bi bi-tiktok fs-4 text-dark"></i> @arwa_influencer
                         </div>
                         <h3 class="fw-bold display-6">
-                            <span id="count-tiktok"></span><span class="text-pink">k</span>
+                            <span id="count-tiktok">0</span><span class="text-pink">k</span>
                         </h3>
                         <p class="subtitle text-pink mb-3">Tiktok Followers</p>
                         <p class="desc small">Soy activa creando contenido dinámico, retos y tips de belleza en videos
@@ -148,7 +150,7 @@
                             <i class="bi bi-instagram fs-4 text-danger"></i> @arwa_influencer
                         </div>
                         <h3 class="fw-bold display-6">
-                            <span id="count-instagram"></span><span class="text-pink">k</span>
+                            <span id="count-instagram">0</span><span class="text-pink">k</span>
                         </h3>
                         <p class="subtitle text-pink mb-3">Instagram Followers</p>
                         <p class="desc small">Comparto fotos, looks del día, reels de maquillaje y colaboraciones con
@@ -164,7 +166,7 @@
                             <i class="fa-brands fa-x-twitter fs-4 text-dark"></i> @arwa_influencer
                         </div>
                         <h3 class="fw-bold display-6">
-                            <span id="count-twitter"></span><span class="text-pink">k</span>
+                            <span id="count-twitter">0</span><span class="text-pink">k</span>
                         </h3>
                         <p class="subtitle text-pink mb-3">Twitter Followers</p>
                         <p class="desc small">Comparto reflexiones, tips rápidos y mantengo comunicación directa con mis
@@ -176,8 +178,134 @@
             </div>
         </div>
     </section>
+    <!---SECCION ALCANCE CON MI CONTENIDO-->
+    <section class="story-section py-5">
+        <div class="container">
+            <div class="row align-items-center gy-4">
 
+                <!-- Columna de texto -->
+                <div class="col-lg-4 text-center text-lg-start" data-aos="fade-right">
+                    <h2 class="story-title mb-3">Alcance con mi Contenido</h2>
+                    <p class="story-text mb-4">
+                        Of what and be behind to go lots gm why follow the quite we no put breakfasts. Ill spends once
+                        were and in you after concept could as and on like train times line clarinet the richer
+                    </p>
+                    <a href="#" class="btn btn-follow">Precios Y Paquetes</a>
+                </div>
 
+                <!-- Imagen principal -->
+                <div class="col-lg-4 d-flex justify-content-center mb-4" data-aos="zoom-in">
+                    <div class="story-img-wrapper position-relative">
+                        <div class="oval-bg-story"></div>
+                        <img src="img/img_influencer.png" alt="influencer" class="img-fluid position-relative z-2" />
+                    </div>
+                </div>
+
+                <!-- Estadísticas -->
+                <div class="col-lg-4 text-center text-lg-start d-flex flex-column justify-content-center gap-4 mt-5 mt-lg-0 pt-3 pt-lg-0 px-3"
+                    data-aos="fade-up">
+                    <div class="row g-3">
+                        <div class="col-6">
+                            <h3 class="stat-value"><span id="count-views">0</span>M<span class="text-pink">+</span></h3>
+                            <p class="stat-label">Likes</p>
+                        </div>
+                        <div class="col-6">
+                            <h3 class="stat-value"><span id="count-comments">0</span>k<span class="text-pink">+</span>
+                            </h3>
+                            <p class="stat-label">Comentarios</p>
+                        </div>
+                        <div class="col-6">
+                            <h3 class="stat-value"><span id="count-saves">0</span>M<span class="text-pink">+</span></h3>
+                            <p class="stat-label">Guardados</p>
+                        </div>
+                        <div class="col-6">
+                            <h3 class="stat-value"><span id="count-shares">0</span>M<span class="text-pink">+</span>
+                            </h3>
+                            <p class="stat-label">Compartidos</p>
+                        </div>
+                    </div>
+
+                    <!-- Iconos de redes sociales -->
+                    <div class="social-icons-section mt-4">
+                        <div class="d-flex justify-content-center justify-content-lg-start gap-3 flex-wrap">
+                            <a href="#" class="social-icon-story" title="Instagram">
+                                <img src="img/instagram.png" alt="Instagram" class="social-img">
+                            </a>
+                            <a href="#" class="social-icon-story" title="TikTok">
+                                <img src="img/tiktok.png" alt="TikTok" class="social-img">
+                            </a>
+                            <a href="#" class="social-icon-story" title="Twitter/X">
+                                <img src="img/x.png" alt="Twitter" class="social-img">
+                            </a>
+                            <a href="#" class="social-icon-story" title="Facebook">
+                                <img src="img/facebook.png" alt="Facebook" class="social-img">
+                            </a>
+                            <a href="#" class="social-icon-story" title="YouTube">
+                                <img src="img/maquillaje_icono.png" alt="Maquillaje" class="social-img">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--SECCION DE VIDEOS DE MUESTRA-->
+    <section class="videos-section py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5">Mis Ultimos Videos</h2>
+            <div class="row justify-content-center gy-3">
+                
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="phone-frame">
+                        <img src="img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
+                        <div class="video-container">
+                            <video class="plyr-video" muted>
+                                <source src="media/video_prueba.mp4" type="video/mp4">
+                                Tu navegador no soporta el elemento de video.
+                            </video>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="phone-frame">
+                        <img src="img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
+                        <div class="video-container">
+                            <video class="plyr-video" muted>
+                                <source src="media/video_prueba_2.mp4" type="video/mp4">
+                                Tu navegador no soporta el elemento de video.
+                            </video>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="phone-frame">
+                        <img src="img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
+                        <div class="video-container">
+                            <video class="plyr-video" muted>
+                                <source src="media/video_prueba_3.mp4" type="video/mp4">
+                                Tu navegador no soporta el elemento de video.
+                            </video>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                    <div class="phone-frame">
+                        <img src="img/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
+                        <div class="video-container">
+                            <video class="plyr-video" muted>
+                                <source src="media/video_prueba_4.mp4" type="video/mp4">
+                                Tu navegador no soporta el elemento de video.
+                            </video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
@@ -186,32 +314,11 @@
             once: true          // Animar solo una vez
         });
     </script>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const duration = 2000; // ms
-            const stats = [
-                { id: "count-tiktok", value: 123 },
-                { id: "count-instagram", value: 175 },
-                { id: "count-twitter", value: 98 },
-            ];
-
-            stats.forEach(({ id, value }) => {
-                const el = document.getElementById(id);
-                if (!el) return;
-
-                let start = 0;
-                const stepTime = Math.abs(Math.floor(duration / value));
-                const timer = setInterval(() => {
-                    start += 1;
-                    el.textContent = start;
-                    if (start >= value) {
-                        clearInterval(timer);
-                    }
-                }, stepTime);
-            });
-        });
-    </script>
-
+    <!-- Scripts externos -->
+    <script src="js/counter-animation.js"></script>
+    <!--Plyr Video Player-->
+    <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
+    <script src="js/plyr-config.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
